@@ -4,8 +4,14 @@
 
 	Homepage: http://www.ejabberd.im/mod_muc_admin
 	Author: Badlop
-	This module requires ejabberd 1.1.x for the basic functionality
-	and ejabberd 2.0.0 or 2.0.1 or newer to get all the functionality
+	Requirements: ejabberd trunk SVN 1635 or newer
+
+
+This module implements several ejabberd commands that can be
+executed using ejabberdctl.
+
+It also implements Web Admin pages to view the list of existing
+rooms.
 
 
 	CONFIGURATION
@@ -19,22 +25,20 @@ Add the module to your ejabberd.cfg, on the modules section:
 ]}.
 
 
-	USAGE
-	=====
-
-Now you have several new commands in ejabberdctl.
+	EJABBERD COMMANDS
+	=================
 
 Description of some commands:
 
  - muc-unusued-*
    Those commands related to MUC require an ejabberd version newer than 1.1.x.
    The room characteristics used to decide if a room is unusued:
-    - Days since the last message or subject change: 
-        greater or equal to the command argument 
+    - Days since the last message or subject change:
+        greater or equal to the command argument
     - Number of participants: 0
     - Persistent: not important
     - Has history: not important
-    - Days since last join, leave, room config or affiliation edit: 
+    - Days since last join, leave, room config or affiliation edit:
         not important
     - Just created: no
    Note that ejabberd does not keep room history after a module restart, so
