@@ -1,3 +1,7 @@
+2008-10-12  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Update from ctl to commands (EJAB-694)
+
 2008-09-30  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: Update record definitions to ejabberd
